Checkpoint generated tests for org.apache.avro:avro-mapred:1.10.2 (1)